# solr-optimizer

./: .gitattributes  .gitignore  ARCHITECTURE.md  CI_CD_SETUP.md  CONTRIBUTING.md  OVERVIEW.md  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  PHASE5_SUMMARY.md  PLAN.md  PROJECT_TIMELINE.md  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
demo/: README.md  TODO.md  debug_mode.py  enhanced_reporting.py  preflight_validation.py  run_complete_demo.py  run_demo_with_debug.py  run_demo_with_enhanced_reporting.py  run_enhanced_demo.py  run_simulation_demo.py  schema_validation.py  test_schema_config.py  troubleshooting_guide.md  validate_demo_setup.py
demo/data/: dataset_summary.json  demo_queries.json
demo/docker-setup/: docker-compose.yml  setup.sh  teardown.sh
demo/scripts/: download_data.py  load_data.py
examples/: ai_cli_demo.py  experiment_workflow_demo.py  simple_demo.py
experiment_storage/: index.json
solr_optimizer/: __init__.py  __main__.py
solr_optimizer/cli/: __init__.py  main.py
solr_optimizer/core/: ai_experiment_manager.py  default_experiment_manager.py  experiment_manager.py
solr_optimizer/models/: __init__.py  corpus_config.py  experiment_config.py  iteration_result.py  query_config.py
solr_optimizer/persistence/: __init__.py  database_service.py  persistence_interface.py
solr_optimizer/services/: __init__.py  reference_service.py
solr_optimizer/utils/: __init__.py  judgment_utils.py
tests/demo/: test_end_to_end_demo.py
tests/integration/: test_ai_cli_integration.py
(+87 files in other folders)
